--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ROLLBAR_TOKEN=d849aaece99a403d944cfe34f07d3a31
