--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,18 +1,35 @@
 name: Master workflow
 
 on:
-  pull_request:
-    branches:
-      - 'master'
   push:
-    branches:
-      - 'master'
+    branches: ['main']
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postrgres
+        env:
+          DB_CONNECTION: pgsql
+          POSTGRES_DB: hex_project
+          POSTGRES_USER: psql_user
+          POSTGRES_PASSWORD: psql_pass
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
 
       - name: PHP Security Checker
         uses: StephaneBour/actions-php-security-checker@1.0
@@ -23,5 +40,13 @@ jobs:
       - name: Check lint
         run: make lint
 
-      - name: Execute tests (Unit and Feature tests) via PHPUnit
-        run: make test
+      - name: Run test & publish code coverage
+        uses: paambaati/codeclimate-action@2.7.5
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          POSTGRES_DB: hex_project
+          POSTGRES_USER: psql_user
+          POSTGRES_PASSWORD: psql_pass
+        with:
+          coverageCommand: make test-coverage
+          coverageLocation: ${{github.workspace}}/coverage-report:clover
