--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
     "private": true,
-    "engines": {
-        "node": "12.x"
-    },
     "scripts": {
         "dev": "npm run development",
         "development": "mix",
@@ -14,8 +11,18 @@
     },
     "devDependencies": {
         "axios": "^0.21",
+        "bootstrap": "^4.0.0",
+        "jquery": "^3.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "popper.js": "^1.12",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@rails/ujs": "^6.0",
+        "jquery-ujs": "^1.2.2"
     }
 }
