--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "postinstall": "npm run prod"
     },
     "devDependencies": {
         "axios": "^0.21",
@@ -22,7 +23,6 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "@rails/ujs": "^6.0",
-        "jquery-ujs": "^1.2.2"
+        "@rails/ujs": "^6.0"
     }
 }
