--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/ui": "^3.2",
         "laravelcollective/html": "^6.2",
         "rollbar/rollbar-laravel": "^7.0",
-        "squizlabs/php_codesniffer": "^3.6"
+        "squizlabs/php_codesniffer": "^3.6",
+        "spatie/laravel-query-builder": "^3.4.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
